--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script>
+      window.$ = window.jQuery = require('jquery'); // not sure if you need this at all
+      window.Bootstrap = require('bootstrap');
+  </script>
 </body>
 </html>
